name:                ghc-usage
version:             0.1.0.0
license:             BSD3
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     GhcUsage
  build-depends:       base, ghc >= 8.1, containers
  default-language:    Haskell2010

executable ghc-usage
  main-is:             GhcUsageWrapper.hs
  build-depends:       base, ghc-paths, unix
  default-language:    Haskell2010
